tests/snapshots/algorithm__f1_v1.snap
---
source: tests/algorithm.rs
expression: output
---

[96m=== Variable 'v1' (1/1) in function 'vec::f1' ===[0m

[2m   1 |[0m [95mfn[0m f1[2m([0m[2m)[0m [2m{[0m
[2m   2 |[0m     [95mlet[0m v1[2m:[0m [93mVec[0m[2m<[0m[93m_[0m[2m>[0m = [2m([0m[96m0[0m..[96m100[0m[2m)[0m[2m.[0m[96mcollect[0m[2m([0m[2m)[0m[2m;[0m
[2m     |[0m         [92m--[0m  [92m------[0m   [92m--------[0m [93m---------[0m
[2m   3 |[0m     [95mlet[0m v2[2m:[0m [93mVec[0m[2m<[0m[93m_[0m[2m>[0m = [2m([0m[96m0[0m..[96m100[0m[2m)[0m[2m.[0m[96mcollect[0m[2m([0m[2m)[0m[2m;[0m
[2m     |[0m         [92m--[0m  [92m------[0m   [92m------------------[0m
[2m   4 |[0m     [96mprintln[0m[96m![0m[2m([0m[92m"{v1:?} {v2:?}"[0m[2m)[0m[2m;[0m
[2m     |[0m     [96m-------------------------[0m
[2m   5 |[0m     [96mprintln[0m[96m![0m[2m([0m[92m"finish"[0m[2m)[0m[2m;[0m
[2m     |[0m     [92m------------------[0m
[2m   6 |[0m [2m}[0m
[2m     |[0m [92m-[0m
[2m   7 |[0m 
[2m   8 |[0m [95mfn[0m f2[2m([0m[2m)[0m [2m{[0m

[96mLegend:[0m
  [92m---[0m definitely live (lifetime)
  [92m~~~[0m maybe live
  [96m---[0m immutable borrow
  [38;5;177m---[0m mutable borrow
  [93m---[0m move / call
  [91m~~~[0m outlive / shared mutable
