tests/snapshots/algorithm__f1_v2.snap
---
source: tests/algorithm.rs
expression: output
---

[96m=== Variable 'v2' (1/1) in function 'vec::f1' ===[0m

[2m   1 |[0m [95mfn[0m f1[2m()[0m [2m{[0m
[2m   2 |[0m     [95mlet[0m v1[2m:[0m [93mVec[0m[2m<[0m[93m_[0m[2m>[0m = [2m([0m[96m0[0m..[96m100[0m[2m).[0m[96mcollect[0m[2m();[0m
[2m   3 |[0m     [95mlet[0m [4:3m[58;5;10mv2[0m[2m[4:3m[58;5;10m:[0m [4:3m[93m[58;5;10mVec[0m[2m[4:3m[58;5;10m<[0m[4:3m[93m[58;5;10m_[0m[2m[4:3m[58;5;10m>[0m[4:3m[58;5;10m [0m= [2m[4:3m[58;5;10m([0m[4:3m[96m[58;5;10m0[0m[4:3m[58;5;10m..[0m[4:3m[96m[58;5;10m100[0m[2m[4:3m[58;5;10m).[0m[4:3m[96m[58;5;11mcollect[0m[2m[4:3m[58;5;11m();[0m
[2m   4 |[0m     [4:3m[96m[58;5;14mprintln![0m[2m[4:3m[58;5;14m([0m[4:3m[92m[58;5;14m"{v1:?} {v2:?}"[0m[2m[4:3m[58;5;14m);[0m
[2m   5 |[0m     [4:3m[96m[58;5;10mprintln![0m[2m[4:3m[58;5;10m([0m[4:3m[92m[58;5;10m"finish"[0m[2m[4:3m[58;5;10m);[0m
[2m   6 |[0m [2m[4m[58;5;10m}[0m
[2m   7 |[0m 
[2m   8 |[0m [95mfn[0m f2[2m()[0m [2m{[0m

[96mLegend:[0m
  [4:3m[58;5;10m   [0m definitely lives (lifetime) (l)
  [4m[58;5;10m   [0m maybe lives (l)
  [4:3m[58;5;14m   [0m immutable borrow (i)
  [4:3m[58;5;177m   [0m mutable borrow (m)
  [4:3m[58;5;11m   [0m move (v) / call (c)
  [4:3m[58;5;9m   [0m outlive (o) / shared mutable (s)
