tests/snapshots/algorithm__f3_v1.snap
---
source: tests/algorithm.rs
expression: output
---

[96m=== Variable 'v1' (1/1) in function 'vec::f3' ===[0m

[2m  16 |[0m 
[2m  17 |[0m [95mfn[0m f3[2m()[0m [2m{[0m
[2m  18 |[0m     [95mlet[0m [4:3m[58;5;10mv1[0m[2m[4:3m[58;5;10m:[0m [4:3m[93m[58;5;10mVec[0m[2m[4:3m[58;5;10m<[0m[4:3m[93m[58;5;10m_[0m[2m[4:3m[58;5;10m>[0m[4:3m[58;5;10m [0m= [2m[4:3m[58;5;10m([0m[4:3m[96m[58;5;10m0[0m[4:3m[58;5;10m..[0m[4:3m[96m[58;5;10m100[0m[2m[4:3m[58;5;10m).[0m[4:3m[96m[58;5;11mcollect[0m[2m[4:3m[58;5;11m();[0m
[2m  19 |[0m     [95mlet[0m [4:3m[95m[58;5;10mmut[0m[4:3m[58;5;10m r [0m= [4:3m[95m[58;5;14m&[0m[4:3m[58;5;14mv1[0m[2m[4:3m[58;5;14m;[0m
[2m  20 |[0m     [95mif[0m [4:3m[96m[58;5;10m0[0m[4:3m[58;5;10m < [0m[4:3m[58;5;14mv1[0m[2m[4:3m[58;5;14m.[0m[4:3m[96m[58;5;10mlen[0m[2m[4:3m[58;5;10m()[0m[4:3m[58;5;10m [0m[2m{[0m
[2m  21 |[0m         [95mlet[0m [4:3m[58;5;10mv2[0m[2m[4:3m[58;5;10m:[0m [4:3m[93m[58;5;10mVec[0m[2m[4:3m[58;5;10m<[0m[4:3m[93m[58;5;10m_[0m[2m[4:3m[58;5;10m>[0m[4:3m[58;5;10m [0m= [2m[4:3m[58;5;10m([0m[4:3m[96m[58;5;10m0[0m[4:3m[58;5;10m..[0m[4:3m[96m[58;5;10m100[0m[2m[4:3m[58;5;10m).[0m[4:3m[96m[58;5;10mcollect[0m[2m[4:3m[58;5;10m();[0m
[2m  22 |[0m         [4:3m[58;5;10mr = [0m[4:3m[95m[58;5;10m&[0m[4:3m[58;5;10mv2[0m[2m[4:3m[58;5;10m;[0m
[2m  23 |[0m     [2m[4:3m[58;5;10m}[0m
[2m  24 |[0m     [4:3m[96m[58;5;10mprintln![0m[2m[4:3m[58;5;10m([0m[4:3m[92m[58;5;10m"{r:?}"[0m[2m[4:3m[58;5;10m);[0m
[2m  25 |[0m [2m[4:3m[58;5;10m}[0m
[2m  26 |[0m 
[2m  27 |[0m [95mfn[0m f4[2m()[0m [2m{[0m

[96mLegend:[0m
  [4:3m[58;5;10m   [0m definitely lives (lifetime) (l)
  [4m[58;5;10m   [0m maybe lives (l)
  [4:3m[58;5;14m   [0m immutable borrow (i)
  [4:3m[58;5;177m   [0m mutable borrow (m)
  [4:3m[58;5;11m   [0m move (v) / call (c)
  [4:3m[58;5;9m   [0m outlive (o) / shared mutable (s)
