tests/snapshots/algorithm__f4_v1.snap
---
source: tests/algorithm.rs
expression: output
---

[96m=== Variable 'v1' (1/1) in function 'vec::f4' ===[0m

[2m  26 |[0m 
[2m  27 |[0m [95mfn[0m f4[2m([0m[2m)[0m [2m{[0m
[2m  28 |[0m     [95mlet[0m v1[2m:[0m [93mVec[0m[2m<[0m[93m_[0m[2m>[0m = [2m([0m[96m0[0m..[96m100[0m[2m)[0m[2m.[0m[96mcollect[0m[2m([0m[2m)[0m[2m;[0m
[2m     |[0m         [92m--[0m  [92m------[0m   [92m--------[0m [93m---------[0m
[2m  29 |[0m     [95mif[0m [96m0[0m < v1[2m.[0m[96mlen[0m[2m([0m[2m)[0m [2m{[0m
[2m     |[0m        [92m---[0m [96m--[0m [92m-----[0m
[2m  30 |[0m         [96mprintln[0m[96m![0m[2m([0m[92m"definitely live here"[0m[2m)[0m[2m;[0m
[2m     |[0m         [92m--------------------------------[0m
[2m  31 |[0m         [96mdrop[0m[2m([0mv1[2m)[0m[2m;[0m
[2m     |[0m         [92m----[0m [93m--[0m
[2m  32 |[0m         [96mprintln[0m[96m![0m[2m([0m[92m"definitely dropped here"[0m[2m)[0m[2m;[0m
[2m  33 |[0m     [2m}[0m [95melse[0m [2m{[0m
[2m  34 |[0m         [96mprintln[0m[96m![0m[2m([0m[92m"definitely live here"[0m[2m)[0m[2m;[0m
[2m     |[0m         [92m--------------------------------[0m
[2m  35 |[0m         [96mprintln[0m[96m![0m[2m([0m[92m"{v1:?}"[0m[2m)[0m[2m;[0m
[2m     |[0m         [96m------------------[0m
[2m  36 |[0m         [96mprintln[0m[96m![0m[2m([0m[92m"definitely live here"[0m[2m)[0m[2m;[0m
[2m     |[0m         [92m--------------------------------[0m
[2m  37 |[0m     [2m}[0m
[2m     |[0m     [92m~[0m
[2m  38 |[0m     [96mprintln[0m[96m![0m[2m([0m[92m"maybe live here..."[0m[2m)[0m[2m;[0m
[2m     |[0m     [92m~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~[0m
[2m  39 |[0m     [96mprintln[0m[96m![0m[2m([0m[92m"{v1:?}"[0m[2m)[0m[2m;[0m
[2m     |[0m     [91m~~~~~~~~~~~~~~~~~~[0m
[2m  40 |[0m [2m}[0m
[2m     |[0m [92m~[0m

[96mLegend:[0m
  [92m---[0m definitely live (lifetime)
  [92m~~~[0m maybe live
  [96m---[0m immutable borrow
  [38;5;177m---[0m mutable borrow
  [93m---[0m move / call
  [91m~~~[0m outlive / shared mutable
